# schoolr

./: .gitignore  Cargo.toml
.devcontainer/: devcontainer.json  postCreate.sh
src/: classroom.rs  course.rs  main.rs
