[package]
name = "schoolr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.19.0"
color-eyre = "0.6"
fuzzydate = { git = "https://github.com/TheBotlyNoob/fuzzydate" }
chrono = "0.4"
yup-oauth2 = "8.1"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
