[package]
name = "schoolr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.19.0"
color-eyre = "0.6"
fuzzydate = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
google-classroom1 = "*"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
static_init = "1.0"
